--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -12,3 +12,13 @@
   flex-direction: row;
   justify-content: center;
 }
+
+
+@media screen and (max-width: 600px) {
+  .container__articles {
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px;
+
+  }
+}
