--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,4 +1,4 @@
-.container__big-card {
+/* .container__big-card {
   margin: 1rem 1rem;
   max-width: 25rem;
   max-height: 37.5rem;
@@ -28,4 +28,117 @@
   margin-top: 0.8rem;
 }
 
+
+@media screen and (max-width: 600px) {
+  .container__big-card {
+    margin: 1rem 0;
+    max-width: 25rem;
+    max-height: 37.5rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .big-card__image img {
+    border-radius: 0.2rem;
+    max-width: 25rem;
+    max-height: 37.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .big-card__title h1 {
+    font-size: 1.25rem;
+
+  }
+
+  .big-card__description p {
+    color: gray;
+    font-size: 0.75rem;
+    margin-top: 0.8rem;
+  }
+} */
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1200px;
+  gap: 2rem;
+
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: clamp(20rem, calc(20rem + 2vw), 22rem);
+  overflow: hidden;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 1em;
+  background: #ECE9E6;
+  background: linear-gradient(to right, #FFFFFF, #ECE9E6);
+
+}
+
+
+
+.card__body {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+
+.tag {
+  align-self: flex-start;
+  padding: .25em .75em;
+  border-radius: 1em;
+  font-size: .75rem;
+}
+
+.tag + .tag {
+  margin-left: .5em;
+}
+
+.tag-blue {
+  background: #56CCF2;
+background: linear-gradient(to bottom, #2F80ED, #56CCF2);
+  color: #fafafa;
+}
+
+.tag-brown {
+  background: #D1913C;
+background: linear-gradient(to bottom, #FFD194, #D1913C);
+  color: #fafafa;
+}
+
+.tag-red {
+  background: #cb2d3e;
+background: linear-gradient(to bottom, #ef473a, #cb2d3e);
+  color: #fafafa;
+}
+
+.card__body h4 {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  color: black;
+}
+
+.card__body p {
+
+  color: gray;
+}
+
+.card__footer {
+  display: flex;
+  padding: 1rem;
+  margin-top: auto;
+}
 
