--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,4 +1,4 @@
-.container__small-card {
+/* .container__small-card {
   width: 700px;
   margin-top: 1em;
 
@@ -24,4 +24,89 @@
   margin-top: 1em;
   color: gray;
   opacity: 0.2;
+} */
+
+.container {
+  display: flex;
+  justify-content: center;
+  max-width: 1200px;
+  margin-bottom: 1em;
+  gap: 2rem;
+
 }
+
+img {
+  width: 150px;
+  height: 100%;
+  min-width: 150px;
+  margin-right: 20px;
+}
+
+.card {
+  display: flex;
+  flex-direction: row;
+  width: clamp(20rem, calc(20rem + 2vw), 22rem);
+  overflow: hidden;
+  box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+  border-radius: 0.7em;
+  background: #ECE9E6;
+  background: linear-gradient(to right, #FFFFFF, #ECE9E6);
+
+}
+
+
+
+.card__body {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+
+.tag {
+  align-self: flex-start;
+  padding: .25em .75em;
+  border-radius: 1em;
+  font-size: .35rem;
+}
+
+.tag + .tag {
+  margin-left: .5em;
+}
+
+.tag-blue {
+  background: #56CCF2;
+background: linear-gradient(to bottom, #2F80ED, #56CCF2);
+  color: #fafafa;
+}
+
+.tag-brown {
+  background: #D1913C;
+background: linear-gradient(to bottom, #FFD194, #D1913C);
+  color: #fafafa;
+}
+
+.tag-red {
+  background: #cb2d3e;
+background: linear-gradient(to bottom, #ef473a, #cb2d3e);
+  color: #fafafa;
+}
+
+.card__body h4 {
+  font-size: 1rem;
+  text-transform: capitalize;
+  color: black;
+}
+
+.card__body p {
+
+  color: gray;
+}
+
+.card__footer {
+  display: flex;
+  padding: 1rem;
+  margin-top: auto;
+}
+
