--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,4 +1,4 @@
-<div class="container__small-card">
+<!-- <div class="container__small-card">
   <div class="container__small-card-content">
 
     <div class="small-card__image">
@@ -14,6 +14,21 @@
   <div class="container__small-card__separator">
     <hr/>
   </div>
+</div> -->
+
+
+<div class="container">
+  <div class="card">
+    <div class="card__header">
+      <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" alt="card__image" class="card__image" width="600">
+    </div>
+    <div class="card__body">
+      <span class="tag tag-blue">Classic</span>
+      <h4>Classic Cars</h4>
+    </div>
+    <div class="card__footer">
+    </div>
+  </div>
+
+
 </div>
-
-
