components dynamics properties

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,12 +1,12 @@
-<!-- <div class="container__small-card">
+<div class="container__small-card">
   <div class="container__small-card-content">
 
     <div class="small-card__image">
-      <img src="https://via.placeholder.com/150" alt="image">
+      <img src="{{ imageCover }}" alt="image">
     </div>
 
     <div class="small-card__title">
-      <h3> <a href="#">Small Card</a></h3>
+      <h3> <a href="#">{{cardTitle}}</a></h3>
     </div>
 
   </div>
@@ -14,21 +14,6 @@
   <div class="container__small-card__separator">
     <hr/>
   </div>
-</div> -->
-
-
-<div class="container">
-  <div class="card">
-    <div class="card__header">
-      <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" alt="card__image" class="card__image" width="600">
-    </div>
-    <div class="card__body">
-      <span class="tag tag-blue">Classic</span>
-      <h4>Classic Cars</h4>
-    </div>
-    <div class="card__footer">
-    </div>
-  </div>
-
-
 </div>
+
+
