--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,30 +1,15 @@
-<!-- <div class="container__big-card">
+<div class="container__big-card">
   <a class="bird-card__link" href="#">
       <div class="big-card__image">
-        <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" alt="" height="200px">
+        <img src="{{ imageCover }}" alt="" height="200px">
       </div>
       <div class="big-card__title">
-        <h1>Saiu a nova versão do Angular!</h1>
+        <h1>{{cardTitle}}</h1>
       </div>
       <div class="big-card__description">
-        <p>Angular 9.0.0-next.9 é a nova versão do framework que traz diversas novidades e melhorias. Confira!</p>
+        <p>{{cardDescription}}</p>
       </div>
   </a>
-</div> -->
-
-<div class="container">
-  <div class="card">
-    <div class="card__header">
-      <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" alt="card__image" class="card__image" width="600">
-    </div>
-    <div class="card__body">
-      <span class="tag tag-blue">Classic</span>
-      <h4>Classic Cars</h4>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
-    </div>
-    <div class="card__footer">
-    </div>
-  </div>
-
-
 </div>
+
+
