--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,10 +7,10 @@
   height: 100vh;
 }
 .container__articles {
-  margin-top: 2em;
   display:flex;
   flex-direction: row;
   justify-content: center;
+  background-color: black;
 }
 
 
