dynamic blog update

--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,62 +1,42 @@
 .container__big-card {
   margin: 2rem 1rem;
-  max-width: 25rem;
+  max-width: 50rem;
   max-height: 37.5rem;
 
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  transition: transform 300ms ease-out;
 }
 
 
 .big-card__image img {
   border-radius: 0.2rem;
-  width:100%;
+  width:25rem;
   max-width: 25rem;
   max-height: 37.5rem;
   margin-bottom: 1rem;
+  object-fit: cover;
+
 }
 
+.container__big-card:hover {
+  transform: translate(0px, 0px) scale(1.1, 1.1);
+  background-color: black;
+  box-shadow: rgba(71, 52, 52, 0.24) 0px 3px 8px;;
+}
 .big-card__title h1 {
   font-size: 1.25rem;
+  max-width: 25rem;
 
 }
 
 .big-card__description p {
   color: gray;
+  max-width: 25rem;
   font-size: 0.75rem;
   margin-top: 0.8rem;
 }
 
 
-@media screen and (max-width: 600px) {
-  .container__big-card {
-    margin: 1rem 0;
-    max-width: 25rem;
-    max-height: 37.5rem;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
-
-  .big-card__image img {
-    border-radius: 0.2rem;
-    max-width: 25rem;
-    max-height: 37.5rem;
-    margin-bottom: 1rem;
-  }
-
-  .big-card__title h1 {
-    font-size: 1.25rem;
-
-  }
-
-  .big-card__description p {
-    color: gray;
-    font-size: 0.75rem;
-    margin-top: 0.8rem;
-  }
-}
