--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,9 @@
   <div class="bg-full">
 
     <!-- Navbar -->
+
     <app-menu-bar></app-menu-bar>
+
 
     <!-- Title -->
     <app-menu-title></app-menu-title>
@@ -11,13 +13,15 @@
 <!-- Articles -->
 <div class="container__articles">
   <div class="articles__main">
-    <app-big-card imageCover="https://s2-autoesporte.glbimg.com/fZILpGUAkQZ_wMYO0DXsnknsCVQ=/1200x/smart/filters:cover():strip_icc()/i.s3.glbimg.com/v1/AUTH_cf9d035bf26b4646b105bd958f32089d/internal_photos/bs/2020/R/e/6sC7VFQkKArBqvl1Nfzg/2015-02-13-bmw-serie-2-16.png" cardTitle="Navigating the Road of Innovation: The Fascinating Evolution of BMW" cardDescription="Discover BMW's incredible evolution in our blog. Explore its history, innovations, and iconic design transformations in 'Navigating the Road of Innovation."></app-big-card>
-    <app-big-card imageCover="https://www.byd.com.br/wp-content/uploads/2022/07/BYD-SEAL-BYD-ATTO-3-and-BYD-DOLPHIN-were-showcased-at-the-conference1-scaled.jpg" cardTitle="Charging Ahead: The Future of Electric Cars" cardDescription="Dive into the future of automotive innovation with our blog, 'Charging Ahead: The Future of Electric Cars.' Explore the latest trends, breakthrough technologies, and the green revolution that is shaping the automotive industry."></app-big-card>
+    <app-big-card Id="1" imageCover="https://s2-autoesporte.glbimg.com/fZILpGUAkQZ_wMYO0DXsnknsCVQ=/1200x/smart/filters:cover():strip_icc()/i.s3.glbimg.com/v1/AUTH_cf9d035bf26b4646b105bd958f32089d/internal_photos/bs/2020/R/e/6sC7VFQkKArBqvl1Nfzg/2015-02-13-bmw-serie-2-16.png" cardTitle="Navigating the Road of Innovation: The Fascinating Evolution of BMW" cardDescription="Discover BMW's incredible evolution in our blog. Explore its history, innovations, and iconic design transformations in 'Navigating the Road of Innovation."></app-big-card>
+    <app-big-card  Id="2" imageCover="https://www.byd.com.br/wp-content/uploads/2022/07/BYD-SEAL-BYD-ATTO-3-and-BYD-DOLPHIN-were-showcased-at-the-conference1-scaled.jpg" cardTitle="Charging Ahead: The Future of Electric Cars" cardDescription="Dive into the future of automotive innovation with our blog, 'Charging Ahead: The Future of Electric Cars.' Explore the latest trends, breakthrough technologies, and the green revolution that is shaping the automotive industry."></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card imageCover="https://insuremycars.ie/wp-content/uploads/2023/01/Mercedes-SL-300-Gullwing-classic-car-1-1024x576.jpg" cardTitle="5 Best Classic Cars to Own in Ireland"></app-small-card>
-    <app-small-card imageCover="https://quatrorodas.abril.com.br/wp-content/uploads/2022/08/lamborghini_urus_performante_549.jpeg?quality=70&strip=info" cardTitle="Unleashing the Beast: The Lamborghini Urus Experience"></app-small-card>
-    <app-small-card imageCover="https://i0.statig.com.br/bancodeimagens/7q/3z/mi/7q3zmifgy7zuknlwyldbuawbu.jpg" cardTitle="Volkswagen Beetle celebrates 60 years in Brazil"></app-small-card>
+    <app-small-card Id="3" imageCover="https://insuremycars.ie/wp-content/uploads/2023/01/Mercedes-SL-300-Gullwing-classic-car-1-1024x576.jpg" cardTitle="5 Best Classic Cars to Own in Ireland"></app-small-card>
+    <app-small-card Id="4" imageCover="https://quatrorodas.abril.com.br/wp-content/uploads/2022/08/lamborghini_urus_performante_549.jpeg?quality=70&strip=info" cardTitle="Unleashing the Beast: The Lamborghini Urus Experience"></app-small-card>
+    <app-small-card Id="5"  imageCover="https://hips.hearstapps.com/townandcountry/assets/16/14/1962-ferrari-250-gto_1.jpg" cardTitle="Classic Cars"></app-small-card>
+    <app-small-card Id="6"  imageCover="https://directimports.com.br/wp-content/uploads/2023/03/mustang-shelby-gt500-16.webp" cardTitle="Ford Mustang Shelby"></app-small-card>
+    <app-small-card Id="7"  imageCover="https://collectingcars.imgix.net/005827/-Hero-Front-Alt.jpg?w=1263&fit=fillmax&crop=edges&auto=format,compress&cs=srgb&q=85" cardTitle="1967 Ford Mustang Fastback"></app-small-card>
   </div>
 </div>
 
