--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 2em 2em;
+  background-color: transparent;
 }
 
 .menu-bar__logo img {
@@ -11,10 +12,7 @@
   height: auto;
   cursor: pointer;
 }
-.menu-bar__hamburger {
-  display: none;
-  cursor: pointer;
-}
+
 
 .container__menu-bar ul {
   display: flex;
@@ -24,6 +22,7 @@
   gap: 5em;
   margin: 0;
   padding: 0;
+  background-color: transparent;
 }
 
 .container__menu-bar ul li {
@@ -31,6 +30,8 @@
   font-weight: 500;
   letter-spacing: 1px;
   cursor: pointer;
+  background-color: transparent;
+  color: white;
 
 }
 
