--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -13,6 +13,15 @@
   background-color: black;
 }
 
+.articles__main {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 
 @media screen and (max-width: 600px) {
   .container__articles {
