--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  color: whitesmoke;
+
+
 }
 
 a {
   text-decoration: none;
+  color: white;
 }
 
 ul {
